# wrench

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
codewrench/: __init__.py  errors.py  ir_translator.py  main.py  reports.py  requirements.txt  wrenchignore.py
codewrench/detectors/: base.py  high.py  medium.py
codewrench/languages/: c_rules.py  cpp_rules.py  go_rules.py  javascript_rules.py  python_rules.py  typescript_rules.py
codewrench/profilers/: profiler.py
opttool/: ai_engine.py  code.py  ir.py  ir_translator.py  main.py  parser_engine.py
opttool/detectors/: base.py  high.py  medium.py
wrench/: ai_engine.py  ir_translator.py  main.py  reports.py
wrench/detectors/: high.py  medium.py
wrench/languages/: c_rules.py  cpp_rules.py  go_rules.py  javascript_rules.py  python_rules.py  typescript_rules.py
